2004-02-23  Adam Weinberger  <adamw@FreeBSD.org>

	* configure.in: Added "en_CA" (Canadian English) to ALL_LINGUAS.

2004-02-11  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-02-08 Darko Obradovic <dobradovic gmx.de>

	* src/main-window.c: fix 114041

2004-02-08  Pawel Salek

	Install as default mailer if requested by user (see bug 131606,
	closely based on the patch by Michael Petullo)
	* libinit_balsa/Makefile.am: add balsa-druid-page-defclient.[hc]

	* libinit_balsa/balsa-druid-page-{directory,finish,user,welcome}.c:
	* libinit_balsa/helper.c: remove 1.x remainings.
	* libinit_balsa/balsa-initdruid.c: plug in defuser page.
	* src/balsa-app.h: add default_client field.
	* src/main.c: update gconf data if requested.
	* src/save-restore.[hc]: implement config_defclient_save().

2004-02-07 17:47  PeterB

	* src/sendmsg-window.c: Steve Wall <balsa-user@wallfamily.us>;
	smarter choice of identity, better handling of signatures.

2004-02-07  Albrecht Dreß

	* libbalsa/message.[hc]: add and initialize prot_state field.
	* libbalsa/rfc3156.[hc]: number of improvements, see
	http://mail.gnome.org/archives/balsa-list/2004-January/msg00209.html
	* src/balsa-index.c: show GPG status whenever available.
	* src/balsa-message.c: changes to _scan_signatures()

2004-02-01 09:11  PeterB

	* libbalsa/address-entry.h: include "address.h".

2004-01-31 16:05  PeterB

	* libbalsa/address-entry.c: replace control characters with spaces;
	fill input after button press event (should fix vanishing
	addresses).

2004-01-27 23:00  PeterB

	* libbalsa/pop3.c: copy uid to caller's buffer only if it's valid.

2004-01-25 Steve Wall

	* src/balsa-icons.[hc]: add "mark all read" icon.
	* src/main-window.c: add "mark all read" menu entry and action.

2004-01-23 08:11  PeterB

	* src/balsa-message.c: set message background correctly for all
	known themes (Albrecht Dreß <albrecht.dress@arcor.de>).

2004-01-21 15:11  PeterB
